# cpprun-cxx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cpprun.cpp  hello.cpp  tests.cpp
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
